{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 278,
  "lineage": "0651ca63-4d56-213c-7058-51497ab09bd1",
  "resources": [
    {
      "mode": "data",
      "type": "kubernetes_ingress_v1",
      "name": "example_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/example-app",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/certificate-arn": "arn:aws:acm:us-east-1:242201315252:certificate/ef962d68-06d3-4f9d-80f4-dc8af2036540",
                  "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTPS\":443}]",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/ssl-redirect": "443",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "kubernetes.io/ingress.class": "alb",
                  "meta.helm.sh/release-name": "example-app",
                  "meta.helm.sh/release-namespace": "default"
                },
                "generation": 1,
                "labels": {
                  "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "example-app",
                "namespace": "default",
                "resource_version": "3089",
                "uid": "2883509b-6e4c-4cdb-8276-2fcd4621ce98"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "example-shop.i3.devops.antimatter.io",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "example-app",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "example-shop.i3.devops.antimatter.io"
                    ],
                    "secret_name": "example-app-tls"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-default-examplea-597a1f39f8-1227798499.us-east-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d2b9fb8aa8a6085",
            "arn": "arn:aws:ec2:us-east-1:242201315252:elastic-ip/eipalloc-09d2b9fb8aa8a6085",
            "association_id": "eipassoc-0da341038a922a64d",
            "domain": "vpc",
            "id": "eipalloc-09d2b9fb8aa8a6085",
            "network_border_group": "us-east-1",
            "network_interface": "eni-029d118ccb334edee",
            "private_dns": "ip-10-0-0-206.ec2.internal",
            "private_ip": "10.0.0.206",
            "public_dns": "ec2-34-239-192-248.compute-1.amazonaws.com",
            "public_ip": "34.239.192.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "shop-eks-cluster-nat-eip"
            },
            "tags_all": {
              "Name": "shop-eks-cluster-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201315252:internet-gateway/igw-015c784fc34856330",
            "id": "igw-015c784fc34856330",
            "owner_id": "242201315252",
            "tags": {
              "Name": "shop-eks-cluster-igw"
            },
            "tags_all": {
              "Name": "shop-eks-cluster-igw"
            },
            "vpc_id": "vpc-0a8028273c0838775"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d2b9fb8aa8a6085",
            "association_id": "eipassoc-0da341038a922a64d",
            "connectivity_type": "public",
            "id": "nat-04b0ad765bbe5aa6c",
            "network_interface_id": "eni-029d118ccb334edee",
            "private_ip": "10.0.0.206",
            "public_ip": "34.239.192.248",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09165b871c644bfb3",
            "tags": {
              "Name": "shop-eks-cluster-nat-gateway"
            },
            "tags_all": {
              "Name": "shop-eks-cluster-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0387959d3e97e64101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04b0ad765bbe5aa6c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0387959d3e97e6410",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-015c784fc34856330",
            "id": "r-rtb-0d2c81d5aa6ae82761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2c81d5aa6ae8276",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201315252:route-table/rtb-0387959d3e97e6410",
            "id": "rtb-0387959d3e97e6410",
            "owner_id": "242201315252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b0ad765bbe5aa6c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shop-eks-cluster-private-rt"
            },
            "tags_all": {
              "Name": "shop-eks-cluster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8028273c0838775"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201315252:route-table/rtb-0d2c81d5aa6ae8276",
            "id": "rtb-0d2c81d5aa6ae8276",
            "owner_id": "242201315252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015c784fc34856330",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shop-eks-cluster-public-rt"
            },
            "tags_all": {
              "Name": "shop-eks-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8028273c0838775"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d831a59fc7dc6748",
            "route_table_id": "rtb-0387959d3e97e6410",
            "subnet_id": "subnet-0ed07aa5da695f2b5"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086391d85e19dfadd",
            "route_table_id": "rtb-0387959d3e97e6410",
            "subnet_id": "subnet-03eacad44f633c0c2"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab7d5cbff4dfddfb",
            "route_table_id": "rtb-0d2c81d5aa6ae8276",
            "subnet_id": "subnet-09165b871c644bfb3"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ccf8f67407ad724",
            "route_table_id": "rtb-0d2c81d5aa6ae8276",
            "subnet_id": "subnet-0e1ae3f91d13a4c39"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201315252:subnet/subnet-0ed07aa5da695f2b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed07aa5da695f2b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242201315252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shop-eks-cluster-private-subnet-0"
            },
            "tags_all": {
              "Name": "shop-eks-cluster-private-subnet-0"
            },
            "vpc_id": "vpc-0a8028273c0838775"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201315252:subnet/subnet-03eacad44f633c0c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eacad44f633c0c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242201315252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shop-eks-cluster-private-subnet-1"
            },
            "tags_all": {
              "Name": "shop-eks-cluster-private-subnet-1"
            },
            "vpc_id": "vpc-0a8028273c0838775"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201315252:subnet/subnet-09165b871c644bfb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09165b871c644bfb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "242201315252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shop-eks-cluster-public-subnet-0",
              "kubernetes.io/cluster/shop-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "shop-eks-cluster-public-subnet-0",
              "kubernetes.io/cluster/shop-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a8028273c0838775"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201315252:subnet/subnet-0e1ae3f91d13a4c39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1ae3f91d13a4c39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "242201315252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shop-eks-cluster-public-subnet-1",
              "kubernetes.io/cluster/shop-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "shop-eks-cluster-public-subnet-1",
              "kubernetes.io/cluster/shop-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a8028273c0838775"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201315252:vpc/vpc-0a8028273c0838775",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078d82857c1b18e60",
            "default_route_table_id": "rtb-0ee9afe1b989b91a4",
            "default_security_group_id": "sg-09ee3a57f952a2434",
            "dhcp_options_id": "dopt-007cbcf1c078de9b5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8028273c0838775",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee9afe1b989b91a4",
            "owner_id": "242201315252",
            "tags": {
              "Name": "shop-eks-cluster-vpc"
            },
            "tags_all": {
              "Name": "shop-eks-cluster-vpc"
            }
          }
        }
      ]
    }
  ]
}